# wispher2

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  generate_project.bat  generate_project.ps1  generate_project.sh
.github/: rename_project.sh  template.yml
.github/workflows/: rename_project.yml
code/: CMakeLists.txt
code/project_name/: dependencies.cmake
code/project_name/private/project_name/: entrypoint.cpp  gameproject.cpp
code/project_name/public/project_name/: gameproject.h
code/wispher2/: CMakeLists.txt  source_definitions.cmake
code/wispher2/private/wispher2/: gameproject.cpp
code/wispher2/public/wispher2/: gameproject.h
